# StaticAnalysis

./: .coveragerc  .gitignore  CONTRIBUTING.rst  LICENSE.txt  Pipfile  README.rst  prof.py  pyproject.toml  setup.cfg  setup.py  setup.toml.template  update_plots.py  update_replay.py  update_scrims.py
analysis/: Player.py  Replay.py  Statistics.py  draft_vis.py  route_vis.py  table_picks.py  table_prep.py  visualisation.py  ward_vis.py
cache/: cache.py  player_pos.py
docs/: conf.py  index.rst
lib/: Common.py  HeroTools.py  __init__.py  important_times.py  metadata.py  team_info.py
replays/: Common.py  JSONProcess.py  Player.py  PositionTimeBase.py  Replay.py  Rune.py  Scan.py  Smoke.py  TeamSelections.py  Ward.py
src/StaticAnalysis/: __init__.py  custom_plots.py  update_plots.py  update_replay.py  update_scrims.py
src/StaticAnalysis/analysis/: Player.py  Replay.py  Stacks.py  Statistics.py  draft_vis.py  networth.py  picks.py  priority_picks.py  route_vis.py  rune.py  smoke_vis.py  table_picks.py  table_picks_panda.py  table_picks_rework.py  visualisation.py  ward_vis.py
src/StaticAnalysis/lib/: Common.py  HeroTools.py  __init__.py  important_times.py  metadata.py  team_info.py
src/StaticAnalysis/replays/: JSONProcess.py  Player.py  (+11 more)
tests/: Replay.py  Setup.py  SummaryStatistics.py  counter_picks.py  draft_newvis.py  flex_picks.py  minimal_db.py  new_map.py  player_pos_optimisation.py  table_test.py  test_draw.py  test_plots.py  test_pos_binning.py  test_scrim_teams.py  test_vis.py  test_ward_routes.py  ward_newvis.py  ward_newvis2.py  ward_winrate.py
(+52 files in other folders)
