[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.poetry]
name = "StaticAnalysis"
version = "2.3.0"
description = "Data analytics for Dota 2 replay data."
authors = ["Matthew Chadwick"]

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
adjusttext = "1.*"
"dogpile.cache" = "1.*"
flake8 = "7.*"
fpdf2 = "2.*"
matplotlib = ">=3.8,<3.9"
pandas = "2.*"
pillow = "11.*"
pygsheets = "2.*"
python-dotenv = "1.*"
pytz = "2024.*"
requests = "2.*"
scipy = "1.*"
sqlalchemy = "2.*"
propubs = {path = "E:/Python/ProPubs", develop = true}
herotools = {path = "E:/Python/HeroTools", develop = true}
pylluvial = "^1.1.1"
tqdm = "^4.67.1"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
ipython = "^9.4.0"

